[package]
name = "joycontroller"
version = "0.1.0"
authors = ["Simon Kirkby <obeygiantrobot@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "joycontroller"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.7"

#bitflags = "1.3.2"
#shared-bus = "0.2.4"
#statig = "0.1.0"

serde_derive = { version = "1.0.147", default-features = false }

#libm = { version = "0.2.6", default-features = false }
byteio = { version = "0.2.3", default-features = false }
serde = { version = "1.0.149", default-features = false }
hubpack = "0.1.1"
libm = "0.2.6"

[dependencies.max7219]
path = "/opt/max7219/" # the update
#max7129 = "0.4.0"

[dependencies.arduino-hal]
path = "/opt/avr-hal/arduino-hal/"
#git = "https://github.com/rahix/avr-hal"
#rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
#rev = "3b8f39fa2ec5e3359c7bedc33d982e75e8cc3700"
#rev = "c6a3d997561722f01fef9b62baeccab425b178a9"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.5.0"
features = ["atmega328p"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

#[workspace]
#members = ["crates/*"]
