[package]
name = "newdrive-async"
version = "0.1.0"
authors = ["Simon Kirkby <obeygiantrobot@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "newdrive-async"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
heapless = { version = "0.8.0", features = ["portable-atomic"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
fugit = "0.3.7"
portable-atomic = "1.7.0"
hubpack = "0.1.2"
serde = { version = "1.0.149", default-features = false }
eeprom_store = {path="eeprom_store"}
serde_derive = { version = "1.0.210", default-features = false }
shared-bus = "0.3.1"
libm = "0.2.8"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.5.4"
features = ["atmega328p"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
# strip = true
