[package]
name = "pythonator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
clap = { version = "4.2.7", features = ["derive"] } 
quote = "1.0.25"
serde = { version = "1.0.158", features = ["derive"] }
serde_derive = "1.0.158"
syn = { version = "1.0.109", features = ["full","extra-traits","visit"] } 
toml = "0.7.3"
